--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">November 17, 2022</span>
+									<span class="date">November 2022</span>
 									<h2><a href="#">Golf</a></h2>
 									<p>A short film about our local golf course</p>
 								</header>
@@ -52,7 +52,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
+										<span class="date">April 2017</span>
 										<h2><a href="#">Sed magna<br />
 										ipsum faucibus</a></h2>
 									</header>
@@ -64,7 +64,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
+										<span class="date">April 2017</span>
 										<h2><a href="#">Primis eget<br />
 										imperdiet lorem</a></h2>
 									</header>
@@ -76,7 +76,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
+										<span class="date">April 2017</span>
 										<h2><a href="#">Ante mattis<br />
 										interdum dolor</a></h2>
 									</header>
@@ -88,7 +88,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
+										<span class="date">April 2017</span>
 										<h2><a href="#">Tempus sed<br />
 										nulla imperdiet</a></h2>
 									</header>
