--- a/index.html
+++ b/index.html
@@ -99,11 +99,8 @@
               ><img src="images/pic03.jpg" alt=""
             /></a>
             <p>A poster I made in Photoshop for the EKO-föreställning</p>
-            <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
-            </ul>
           </article>
-          <article>
+          <!-- <article>
             <header>
               <span class="date">April 2017</span>
               <h2>
@@ -146,7 +143,7 @@
             <ul class="actions special">
               <li><a href="#" class="button">Full Story</a></li>
             </ul>
-          </article>
+          </article> -->
         </section>
       </div>
 
